Fixed overflow

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -290,6 +290,7 @@ from touching the row content above or below.
 
 .autocomplete .dropdown-menu {
     width:100%;
+    overflow:auto;
 }
 
 .results-heading {
